--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "praktikum",
+  "homepage": "https://github.com/AshesToAshes13/praktikum",
   "version": "0.0.1",
   "description": "Some description",
   "main": "index.js",
   "scripts": {
     "build": "rimraf dist && webpack --mode production",
-    "dev": "webpack-dev-server --mode development --open --watch"
+    "dev": "webpack-dev-server --mode development --open --watch",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [
     "praktikum"
@@ -20,7 +22,7 @@
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "cssnano": "^4.1.10",
-    "gh-pages": "^2.2.0",
+    "gh-pages": "~2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss-loader": "^3.0.0",
